[project]
name = "eventnerf"
description = "my version of cvpr2023 eventnerf"
version = "0.1.0"

dependencies = ["nerfstudio>=0.3.3", "numba", "torchtyping"] 


[tool.setuptools.packages.find]
include = ["event*"]

[project.entry-points.'nerfstudio.method_configs']
eventnerf = 'eventnerf.event_config:EventConfig'
eventnerf2 = 'eventnerf.event_config:EventConfig2'
eventnerf3 = 'eventnerf.event_config:EventConfig3'
eventnerf4 = 'eventnerf.event_config:EventConfig4'
eventnerf5 = 'eventnerf.event_config:EventConfig5'
#event-dataparser = 'eventnerf.event_config:EventDataparser'
